cluster-example-client/k8s-yml/ejb-slb-client-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name:  ejblbclient
  labels:
    app:  ejblbclient 
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  ejblbclient
  template:
    metadata:
      labels:
        app:  ejblbclient 
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
      - name:  ejblbclient
        image: 'image-registry.openshift-image-registry.svc:5000/mbms-morder-feature/ejblbclient:latest'
#        image:  ejblbclient:latest
        imagePullPolicy: Always
#        imagePullPolicy: IfNotPresent
        ports: 
            - containerPort: 9090
              protocol: TCP
            - containerPort: 8081
              protocol: TCP     
        resources:
          requests: 
            memory: 300Mi
            cpu: 200m
          limits: 
            memory: 700Mi
            cpu: 400m
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ejblbclient
    service: ejblbclient
  name: ejblbclient
spec:
  ports:
  - name: tcp-ejb-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: ejblbclient
  sessionAffinity: None
  type: ClusterIP
